--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "Hugo <c1297097@bb.com.br>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.61",
