--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev src/server.ts",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "repository": "https://github.com/hxande/cep-labs.git",
   "author": "Hugo <c1297097@bb.com.br>",
@@ -16,6 +18,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.10",
+    "jest": "^26.4.2",
+    "ts-jest": "^26.3.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^4.0.2"
