--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.10",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/swagger-ui-express": "^4.1.2",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
